<resources>
    <string name="app_name">Твои пароли</string>

    <string name="title">Твои пароли</string>
    <string name="service_name">Имя сервиса (сайта, почты и т.п.), для которого нужен пароль:</string>
    <string name="private_key">Универсальный пароль:</string>
    <string name="show_private_key">Показать универсальный пароль</string>
    <string name="show_pass">Показать созданный пароль</string>
    <string name="to_clipboard">Скопировать в буфер</string>
    <string name="create_password">Создать пароль</string>
    <string name="web_version">Web-версия</string>
    <string name="web_version_url">http://your-pass.ru/</string>
</resources>
